--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ description = "A library to inline HTML assets."
 readme = "README.md"
 license = "MIT"
 authors = ["Lucas Nogueira <lucas@tauri.studio>"]
-repository = "https://github.com/tauri-apps/tauri-inliner-rs"
+repository = "HTTPS://GitHub.Com/tauri-apps/tauri-inliner-rs"
 homepage = "https://github.com/tauri-apps/tauri-inliner-rs"
 keywords = ["tauri", "web", "inline", "html", "assets"]
 categories = ["web-programming"]
