--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "tauri-inliner"
 version = "0.0.1"
 description = "A library to inline HTML assets."
 readme = "README.md"
-license = "MIT"
+license-file = "LICENSE"
 authors = ["Lucas Nogueira <lucas@tauri.studio>"]
 repository = "https://github.com/tauri-apps/tauri-inliner-rs"
 homepage = "https://github.com/tauri-apps/tauri-inliner-rs"
