--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,33 +1,36 @@
-[package]
-name = "tauri-inliner"
-version = "0.0.1"
-description = "A library to inline HTML assets."
-readme = "README.md"
-license = "MIT"
-authors = [ "Lucas Nogueira <lucas@tauri.studio>" ]
-repository = "https://github.com/tauri-apps/tauri-inliner-rs"
-homepage = "https://github.com/tauri-apps/tauri-inliner-rs"
-keywords = [ "tauri", "web", "inline", "html", "assets" ]
-categories = [ "web-programming" ]
-edition = "2018"
-exclude = [ "src/fixtures" ]
-
 [dependencies]
-thiserror = "1.0"
-serde_json = "1.0"
+base64 = "0.13"
+derive_more = "0.99"
+html5ever = "0.25"
+kuchiki = "0.8"
+log = "0.4"
 once_cell = "1.5"
 regex = "1.4"
-base64 = "0.13"
-kuchiki = "0.8"
-html5ever = "0.25"
-url = "2.2"
 reqwest = { version = "0.11", features = [ "blocking" ] }
-log = "0.4"
-derive_more = "0.99"
+serde_json = "1.0"
+thiserror = "1.0"
+url = "2.2"
 
 [dev-dependencies]
-tiny_http = "0.8"
-percent-encoding = "2.1"
-env_logger = "0.8"
 dissimilar = "1.0"
+env_logger = "0.8"
+percent-encoding = "2.1"
 termcolor = "1.1"
+tiny_http = "0.8"
+
+[lib]
+path = "Source/lib.rs"
+
+[package]
+authors = [ "Lucas Nogueira <lucas@tauri.studio>" ]
+categories = [ "web-programming" ]
+description = "A library to inline HTML assets."
+edition = "2018"
+exclude = [ "src/fixtures" ]
+homepage = "https://github.com/tauri-apps/tauri-inliner-rs"
+keywords = [ "tauri", "web", "inline", "html", "assets" ]
+license-file = "LICENSE"
+name = "tauri-inliner"
+readme = "README.md"
+repository = "https://github.com/tauri-apps/tauri-inliner-rs"
+version = "0.0.1"
